welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:22: error: not found: value Direction
    case Direction.WEST => left(); if (isFacingWall()) {return true}else{forward()}; left;
         ^ZigZag:23: error: not found: value Direction
    case Direction.EAST => right(); if (isFacingWall()) {return true}else{forward()}; right;
         ^